web/www/assets/styles.css
/* ... */
.pending-legend-box {
  background-color: var(--neutral-blue);
}

.posted-legend-box {
  background-color: var(--green);
}

.error-legend-box {
  background-color: var(--red);
}

#infoHeading,
.info-heading {
  background-color: var(--darker-blue);
  border-radius: 15px;
  padding: 20px;
  margin-top: -80px;
  margin-bottom: 50px;
  color: var(--lighter-blue5);
  font-size: 28px;
}

.info-heading {
  margin-top: -40px;
  margin-bottom: 20px;
}

label,
p {
  color: var(--lighter-blue5);
}


/*----- Fix For Mobile View -----*/
@media screen and (prefers-reduced-motion: reduce) {
  html {
    scroll-behavior: auto;
  }
}

@media (max-width: 750px) {
  .logo {
    position: relative;
    flex-direction: column;
    text-align: center;
  }

  nav {
    flex-direction: column;
  }

  .nav-links ul li {
    display: block;
  }

  .nav-Nav {
    display: none;
    position: absolute;
    background: #0029ff;
    height: 100vh;
    width: 150px;
    top: 0;
    right: -150px;
    text-align: left;
    z-index: 2;
    transition: 1s;
  }

  .nav-Nav ul {
    padding: 10px;
  }

  .bars {
    display: block;
    color: #fff;
    font-size: 22px;
    cursor: pointer;
    padding: 10px;
    text-align: right;
  }

  nav .far {
    display: block;
    color: #fff;
    margin: 10px;
    font-size: 22px;
    cursor: pointer;
  }

  .row {
    display: flex;
    flex-direction: column;
  }

  .modal-content {
    /* height: 80%; */
    max-height: 75%;
    padding-top: 6%;
  }

  .modal-content img {
    padding: 10%;
    padding-top: 60%;
  }

  .search {
    width: 100px;
    right: 100px;
  }

  .navigation.active {
    background-color: unset;
    width: 50px;
  }

  .navigation {
    width: calc(100vw - 20px) ;
  }

  .navigation.active ul {
    opacity: 0;
  }

  .toggle .icon {
    position: relative;
    display: block;
    z-index: 999;
    margin-top: 10px;
  }

  .toggle {
    z-index: 999;
  }

  .main,
  .main.active {
    left: 50px;
  }

  .main.active {
    width: calc(100% - 50px);
  }

  .main {
    width: calc(100% - 50px);
  }


  .post-info {
    display: block;
  }


  .post-info-col1,
  .post-info-col2 {
    width: calc(100% - 40px);
  }

  .post-info-col1 {
    margin-bottom: 20px;
  }

  .modal-content {
    overflow-y: scroll;
    overflow-x: hidden;
  }

  .text-area {
    width: calc(100% - 40px);
    min-height: 50px;
    height: fit-content;
  }

  .prompt {
    width: 80%;
  }

  .account-selection {
    width: 80%;
    margin: 0 auto;
    margin-bottom: 20px;
  }
  .overview-box,
  .overview-container {
    width: 100%;
  }

  #infoHeading {
    margin-top: -50px;
  }

  .date-selector {
    display: block;
  }

  .date-selector input {
    margin-top: 10px;
  }

  .posts-container {
    width: calc(80vw - 80px);
  }

  .post {
    max-width: 45vw;
  }

  .post-legend ul {
    display: flex;
    flex-direction: column;
  }

  .post-legend ul li {
    margin-top: 10px;
  }


  #appScreen {
    margin: 5%;
    margin-top: 50px;
  }

}


/* Do not add anything under here */

